Add baseline-files inputs to action.yml

--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,9 @@ inputs:
   coverage-files:
     description: 'The coverage files to scan. For example, `coverage/lcov.*.info`'
     required: true
+  baseline-files:
+    description: 'The baseline coverage files to compare against for differential coverage. See https://www.mankier.com/1/genhtml#Description-Differential_coverage.'
+    required: false
   artifact-name:
     description: 'The GitHub artifact name of the generated HTML report. For example, `code-coverage-report`. _Note:_ When downloading, it will be extracted in an `html` directory. Optional. Default: `` (Skips uploading of artifacts)'
   minimum-coverage:
