--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,9 @@ inputs:
   baseline-files:
     description: 'The baseline coverage files to compare against for differential coverage. See https://www.mankier.com/1/genhtml#Description-Differential_coverage.'
     required: false
+  diff-file:
+    description: 'Diff file for differential coverage'
+    required: false
   artifact-name:
     description: 'The GitHub artifact name of the generated HTML report. For example, `code-coverage-report`. _Note:_ When downloading, it will be extracted in an `html` directory. Optional. Default: `` (Skips uploading of artifacts)'
   minimum-coverage:
